--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,10 +5,12 @@
     <title>Hello World</title>
 </head>
 <body>
-    <form action="/rest" method="GET">
-        <b>Name: </b>
-        <input  type="text" name="name">
-        <input type="submit" value="say Hello">
+    <a href="/addUser">Add Users</a>|
+    <a href="/getUsers">Show Users</a>|
+    <a href="/all">Show All Users</a>|
+    <a onclick="document.forms['logoutForm'].submit()">Logout</a>
+
+    <form id="logoutForm" method="POST" action="/logout">
     </form>
 </body>
 </html>
